<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical" >

    <!-- Обложка альбома -->
    <ImageView
        android:id="@+id/ImageView_ivAlbumArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/outline_play_arrow_24"
        android:contentDescription="@string/item_list_audio_albumArt" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">

        <TextView
            android:id="@+id/TextView_trackTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/item_list_audio_trackName"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <!-- Длительность -->
    <TextView
        android:id="@+id/TextView_trackDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_track"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

</LinearLayout>