<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ThirdFragment">

    <LinearLayout
        android:id="@+id/linearLayout_third"
        android:layout_width="814dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_thirdFragmentSelectInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:verticalScrollbarPosition="right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/fragment_third_item" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout_thirdFragmentRight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_sourceFriendlyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/friendly_name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="@string/friendly_name_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_sourceFriendlyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/friendly_name_hint"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_editorVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:layoutDirection="rtl"
                android:text="@string/visibility_label"
                android:textAlignment="viewStart"
                app:checkedState="unchecked"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_sourceFriendlyName" />

            <Button
                android:id="@+id/button_saveEditor"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:text="@string/save"
                app:icon="@android:drawable/ic_menu_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkbox_editorVisibility" />

            <Button
                android:id="@+id/button_cancelEditor"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:text="@string/cancel"
                app:icon="@android:drawable/ic_menu_close_clear_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_saveEditor" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

<!--    <com.google.android.material.progressindicator.CircularProgressIndicator-->
<!--        android:id="@+id/circularProgressIndicator_waitEditor"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:foregroundGravity="center"-->
<!--        android:visibility="visible"-->
<!--        android:indeterminate="false"-->
<!--        android:max="100"-->
<!--        android:progress="0"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <LinearLayout-->
<!--        style="?android:attr/buttonBarStyle"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout_third"-->
<!--        tools:ignore="RtlSymmetry">-->

<!--        -->
<!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>